# zero2prod

./: .dockerignore  Cargo.toml  README.md  sqlx-data.json
config/: local_cfg.yaml  local_docker_cfg.yaml
docker/: Dockerfile
migrations/: 20230510141815_create_subscriptions_table.sql
scripts/: init_db.sh
src/: lib.rs
src/adapters/: mod.rs
src/adapters/httpsrv/: mod.rs  server.rs
src/config/: config.rs  mod.rs
tests/: health_check.rs  httpsrv_test.rs
