[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/bin/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.3.1"
anyhow = "1.0.71"
clap = { version = "4.2.7", features = ["derive"] }
env_logger = "0.10.0"
figment = { version = "0.10.8", features = ["yaml", "env"] }
log = "0.4.17"
serde = { version = "1.0.162", features = ["derive"] }
serde_yaml = "0.9.21"
tokio = { version = "1.28.0", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
reqwest = { version = "0.11.17", features = ["json"] }
